2.99000_05 2009-05-27
    - Restructured module hierarchy: all roles/traits moved to Net/Twitter/Role/
    - Itegrated Tatsuhiko Miyagawa's OAuth support as a trait
    - Identica fixes: strings '"true"' and '"false"' to bools; mentions => replies
    - Fixed useragent_args type. (Christopher Biggs)
    - Store HTTP::Response even on success in WrapError for legacy support (Christopher Biggs)

2.99000_04 2009-05-25
    - Moved Net::Twitter to Net::Twitter::Core; Net::Twitter provides new -> new_with_traits
    - Added legacy => [0|1] shortcut option

2.99000_03 2009-05-22
    - Broke MANIFEST on the prior dist (fixed)

2.99000_02 2009-05-22
    - Corrected POD NAME sections and module naming
    - Temporarily removed lib/Net/Twitter/Search.pm from MANIFEST

2.99000_01 2009-05-22
    - Initial dev release of 3.00 candidate
    - Moose based replacement for Net::Twitter