@@ -1,3 +1,5 @@
+    - UTF-8 encode get/post parameters
+
 2.99000_05 2009-05-27
     - Restructured module hierarchy: all roles/traits moved to Net/Twitter/Role/
     - Itegrated Tatsuhiko Miyagawa's OAuth support as a trait
